# john-chess

./: CMakeLists.txt  README.md  engine.c  engine.h  main.c  moves.c  moves.h  nmoves.c  nmoves.h  textures.c  textures.h  types.h
.github/workflows/: cmake-multi-platform.yml
src/: engine.c  engine.h  main.c  moves.c  moves.h  nmoves.c  nmoves.h  textures.c  textures.h
